; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_table.c_free_columns.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_table.c_free_columns.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.column = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @free_columns(%struct.column* %0, i64 %1) #0 {
  %3 = alloca %struct.column*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.column* %0, %struct.column** %3, align 8
  store i64 %1, i64* %4, align 8
  store i64 0, i64* %5, align 8
  br label %6

6:                                                ; preds = %18, %2
  %7 = load i64, i64* %5, align 8
  %8 = load i64, i64* %4, align 8
  %9 = icmp ult i64 %7, %8
  br i1 %9, label %10, label %21

10:                                               ; preds = %6
  %11 = load %struct.column*, %struct.column** %3, align 8
  %12 = load i64, i64* %5, align 8
  %13 = getelementptr inbounds %struct.column, %struct.column* %11, i64 %12
  %14 = getelementptr inbounds %struct.column, %struct.column* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = inttoptr i64 %15 to %struct.column*
  %17 = call i32 @heap_free(%struct.column* %16)
  br label %18

18:                                               ; preds = %10
  %19 = load i64, i64* %5, align 8
  %20 = add i64 %19, 1
  store i64 %20, i64* %5, align 8
  br label %6

21:                                               ; preds = %6
  %22 = load %struct.column*, %struct.column** %3, align 8
  %23 = call i32 @heap_free(%struct.column* %22)
  ret void
}

declare dso_local i32 @heap_free(%struct.column*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
